# pgx-classicenvs

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  sol.py
src/: core.py  gui.py  model.py
tests/: test_model.py
